# Vessel-Clipper

./: CMakeLists.txt  README.md  SubDirectory.cmake  main.cpp
CenterlinesInfoWidget/: CMakeLists.txt  CenterlinesInfoWidget.cpp  CenterlinesInfoWidget.h  CenterlinesInfoWidget.ui
Core/: CMakeLists.txt  boundaryCaps.h  io.cpp  io.h  observe_error.h
Data/: centerline.vtp
MainWindow/: CMakeLists.txt  interactorStyleCenterline.cpp  interactorStyleCenterline.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainWindow.ui.bak  mainWindow.ui.bak1  measurements.cpp  measurements.h  measurements.ui  preferences.cpp  preferences.h  preferences.ui  vtkHausdorffDistancePointSetFilter.cpp  vtkHausdorffDistancePointSetFilter.h
Utils/: CMakeLists.txt
Utils/Branch/: CMakeLists.txt  branch_operation.cpp  branch_operation.h  branch_operation.ui
Utils/Measurements/: measurements.cpp  measurements.h  measurements.ui
Utils/Resample/: resample.ui
